Fixed social icon spacing on full size.  Need to fix mobile view.

--- a/pelican-themes/pelican-svbhack/static/css/skeleton.css
+++ b/pelican-themes/pelican-svbhack/static/css/skeleton.css
@@ -451,3 +451,23 @@ img#header-img {
   text-align: right;
   padding-top: 24px;
 }
+
+/* Side Bar */
+
+/* Social Icon Spacing */
+
+.social-icons {
+    text-align: justify;
+}
+.social-icons:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+.social-icons div {
+    display: inline-block;
+}
+.social-icons a:link {
+    display: block;
+    padding: 1em 0;
+}
